Fix in ZIPExplorer.java code snippet